finish auth
