# internal/model/user.go
@@ -1,11 +1,0 @@
-package model
-
-type User struct {
-	*Model
-	UName string `json:"uname"`
-	UPassword string `json:"upassword"`
-}
-
-func (u User) TableName() string {
-	return "user"
-}
